// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YooModalComponent Snapshots Should be a drawer modal 1`] = `
<yoo-modal
  class="hydrated"
  css-class="drawer"
  data-yoo-modal-host=""
>
  <!---->
  <div
    class="outer-container"
    data-yoo-modal=""
  >
    <div
      attr-layout="row"
      attr-layout-align="space-between"
      class="modal-header"
      data-yoo-modal=""
    >
      <div
        class="inner-header"
        data-yoo-modal=""
      >
        
        <span
          class="modal-title"
          data-yoo-modal=""
        >
          
        </span>
      </div>
      <span
        class="close-icon"
        data-yoo-modal=""
      >
        <i
          class="yo-close"
          data-yoo-modal=""
        />
      </span>
    </div>
    <div
      attr-layout="row"
      class="modal-body"
      data-yoo-modal=""
      data-yoo-modal-slot=""
    />
    
  </div>
</yoo-modal>
`;

exports[`YooModalComponent Snapshots Should be a full screen modal 1`] = `
<yoo-modal
  class="hydrated"
  css-class="fullscreen"
  data-yoo-modal-host=""
>
  <!---->
  <div
    class="outer-container"
    data-yoo-modal=""
  >
    <div
      attr-layout="row"
      attr-layout-align="space-between"
      class="modal-header"
      data-yoo-modal=""
    >
      <div
        class="inner-header"
        data-yoo-modal=""
      >
        
        <span
          class="modal-title"
          data-yoo-modal=""
        >
          
        </span>
      </div>
      <span
        class="close-icon"
        data-yoo-modal=""
      >
        <i
          class="yo-close"
          data-yoo-modal=""
        />
      </span>
    </div>
    <div
      attr-layout="row"
      class="modal-body"
      data-yoo-modal=""
      data-yoo-modal-slot=""
    />
    
  </div>
</yoo-modal>
`;

exports[`YooModalComponent Snapshots Should have a footer 1`] = `
<yoo-modal
  class="hydrated"
  data-yoo-modal-host=""
  has-footer="true"
>
  <!---->
  <div
    class="outer-container"
    data-yoo-modal=""
  >
    <div
      attr-layout="row"
      attr-layout-align="space-between"
      class="modal-header"
      data-yoo-modal=""
    >
      <div
        class="inner-header"
        data-yoo-modal=""
      >
        
        <span
          class="modal-title"
          data-yoo-modal=""
        >
          
        </span>
      </div>
      <span
        class="close-icon"
        data-yoo-modal=""
      >
        <i
          class="yo-close"
          data-yoo-modal=""
        />
      </span>
    </div>
    <div
      attr-layout="row"
      class="modal-body"
      data-yoo-modal=""
      data-yoo-modal-slot=""
    />
    <div
      attr-layout="row"
      class="modal-footer"
      data-yoo-modal=""
    >
      
      <div
        attr-layout="row"
        attr-layout-align="end center"
        class="footer-buttons"
        data-yoo-modal=""
      >
        <div
          class="secondary-button"
          data-yoo-modal=""
        >
          <yoo-button
            class="stable"
            data-yoo-modal=""
            title="Cancel"
          />
        </div>
        <div
          class="primary-button"
          data-yoo-modal=""
        >
          <yoo-button
            class="accent"
            data-yoo-modal=""
            title="Confirm"
          />
        </div>
      </div>
    </div>
  </div>
</yoo-modal>
`;

exports[`YooModalComponent Snapshots Should have a title and a header 1`] = `
<yoo-modal
  class="hydrated"
  data-yoo-modal-host=""
  title="this is text"
>
  <!---->
  <div
    class="outer-container"
    data-yoo-modal=""
  >
    <div
      attr-layout="row"
      attr-layout-align="space-between"
      class="modal-header"
      data-yoo-modal=""
    >
      <div
        class="inner-header"
        data-yoo-modal=""
      >
        
        <span
          class="modal-title"
          data-yoo-modal=""
        >
          this is text
        </span>
      </div>
      <span
        class="close-icon"
        data-yoo-modal=""
      >
        <i
          class="yo-close"
          data-yoo-modal=""
        />
      </span>
    </div>
    <div
      attr-layout="row"
      class="modal-body"
      data-yoo-modal=""
      data-yoo-modal-slot=""
    />
    
  </div>
</yoo-modal>
`;

exports[`YooModalComponent Snapshots Should have a title icon 1`] = `
<yoo-modal
  class="hydrated"
  data-yoo-modal-host=""
  title="this is text"
  title-icon="yo-fire"
>
  <!---->
  <div
    class="outer-container"
    data-yoo-modal=""
  >
    <div
      attr-layout="row"
      attr-layout-align="space-between"
      class="modal-header"
      data-yoo-modal=""
    >
      <div
        class="inner-header"
        data-yoo-modal=""
      >
        <span
          class="icon"
          data-yoo-modal=""
        >
          <i
            class="yo-fire"
            data-yoo-modal=""
          />
        </span>
        <span
          class="modal-title"
          data-yoo-modal=""
        >
          this is text
        </span>
      </div>
      <span
        class="close-icon"
        data-yoo-modal=""
      >
        <i
          class="yo-close"
          data-yoo-modal=""
        />
      </span>
    </div>
    <div
      attr-layout="row"
      class="modal-body"
      data-yoo-modal=""
      data-yoo-modal-slot=""
    />
    
  </div>
</yoo-modal>
`;

exports[`YooModalComponent Snapshots Should have content 1`] = `
<yoo-modal
  class="hydrated"
  data-yoo-modal-host=""
>
  <!---->
  
                        
  
                        
  <div
    class="outer-container"
    data-yoo-modal=""
  >
    <div
      attr-layout="row"
      attr-layout-align="space-between"
      class="modal-header"
      data-yoo-modal=""
    >
      <div
        class="inner-header"
        data-yoo-modal=""
      >
        
        <span
          class="modal-title"
          data-yoo-modal=""
        >
          
        </span>
      </div>
      <span
        class="close-icon"
        data-yoo-modal=""
      >
        <i
          class="yo-close"
          data-yoo-modal=""
        />
      </span>
    </div>
    <div
      attr-layout="row"
      class="modal-body"
      data-yoo-modal=""
      data-yoo-modal-slot=""
    >
      <div
        slot="modal-content"
      >
        Test content
      </div>
    </div>
    
  </div>
</yoo-modal>
`;

exports[`YooModalComponent Snapshots Should have custom primary button text 1`] = `
<yoo-modal
  class="hydrated"
  data-yoo-modal-host=""
  primary-button-text="Hello"
>
  <!---->
  <div
    class="outer-container"
    data-yoo-modal=""
  >
    <div
      attr-layout="row"
      attr-layout-align="space-between"
      class="modal-header"
      data-yoo-modal=""
    >
      <div
        class="inner-header"
        data-yoo-modal=""
      >
        
        <span
          class="modal-title"
          data-yoo-modal=""
        >
          
        </span>
      </div>
      <span
        class="close-icon"
        data-yoo-modal=""
      >
        <i
          class="yo-close"
          data-yoo-modal=""
        />
      </span>
    </div>
    <div
      attr-layout="row"
      class="modal-body"
      data-yoo-modal=""
      data-yoo-modal-slot=""
    />
    
  </div>
</yoo-modal>
`;

exports[`YooModalComponent Snapshots Should have custom secondary button text 1`] = `
<yoo-modal
  class="hydrated"
  data-yoo-modal-host=""
  secondary-button-text="Hello"
>
  <!---->
  <div
    class="outer-container"
    data-yoo-modal=""
  >
    <div
      attr-layout="row"
      attr-layout-align="space-between"
      class="modal-header"
      data-yoo-modal=""
    >
      <div
        class="inner-header"
        data-yoo-modal=""
      >
        
        <span
          class="modal-title"
          data-yoo-modal=""
        >
          
        </span>
      </div>
      <span
        class="close-icon"
        data-yoo-modal=""
      >
        <i
          class="yo-close"
          data-yoo-modal=""
        />
      </span>
    </div>
    <div
      attr-layout="row"
      class="modal-body"
      data-yoo-modal=""
      data-yoo-modal-slot=""
    />
    
  </div>
</yoo-modal>
`;

exports[`YooModalComponent Snapshots Should have no header 1`] = `
<yoo-modal
  class="hydrated"
  data-yoo-modal-host=""
  has-header="false"
>
  <!---->
  <div
    class="outer-container"
    data-yoo-modal=""
  >
    
    <div
      attr-layout="row"
      class="modal-body"
      data-yoo-modal=""
      data-yoo-modal-slot=""
    />
    
  </div>
</yoo-modal>
`;
